--- a/HOST_COMMANDER/ASSETS/HC_CORE/font.css
+++ b/HOST_COMMANDER/ASSETS/HC_CORE/font.css
@@ -25,3 +25,24 @@
 .ct-chart-bar.ct-horizontal-bars .ct-label.ct-vertical.ct-start {
     cursor: pointer;
 }
+/*Scrollbar*/
+::-webkit-scrollbar {
+	width: 6px;
+	height: 6px;
+}
+::-webkit-scrollbar-track {
+	position: absolute;
+	background: gainsboro;
+	border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+	background-color: rgb(179 179 179);
+	border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background-color: rgb(180 199 220);
+}
+::-webkit-scrollbar-button:decrement,
+::-webkit-scrollbar-button:increment {
+	width: 0px;
+}
